--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/DollListView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/DollListView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LazyWelfare.Mobile.Android.Models.Model1
+﻿@model  List<LazyWelfare.AndroidMobile.Models.Doll>
 <html>
 <head>
     <link rel="stylesheet" href="style.css" />
@@ -33,8 +33,13 @@
         <form>
 
             <div data-role="content">
-
-                <h1 id="label">@Model.Text</h1>
+                <ul>
+                    @foreach (var one in Model){
+                    <li>
+                        <h1 id="label">@one.Name</h1>
+                    </li>
+                    }
+                </ul>
 
                 <input type="text" id="textbox" name="textbox" />
 
