--- a/src/Server/LazyWelfare.ServerHost/Pages/SettingPage.xaml
+++ b/src/Server/LazyWelfare.ServerHost/Pages/SettingPage.xaml
@@ -1,11 +1,12 @@
-﻿<UserControl x:Class="WpfApp.Pages.SettingPage"
+﻿<UserControl x:Class="LazyWelfare.ServerHost.Pages.SettingPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:ctrl="clr-namespace:WpfApp.Ctrls"
+             xmlns:local="clr-namespace:LazyWelfare.ServerHost.Pages"
+             xmlns:ctrl="clr-namespace:LazyWelfare.ServerHost.Ctrls"
              mc:Ignorable="d" 
-             d:DesignHeight="550" d:DesignWidth="600">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"></RowDefinition>
@@ -15,7 +16,7 @@
             <RowDefinition Height="80"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
-      
+
         <!-- 标题 -->
         <Border  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Background="#FFC98484" >
             <TextBlock Name="TitleBroad" Text="服务设置"  FontSize="32" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FF034F5B" ></TextBlock>
@@ -39,4 +40,5 @@
             <Button   Content="应用修改"  Click="Button_SaveChanges_Click"  Width="80" FontSize="14"  ></Button>
         </StackPanel>
     </Grid>
+
 </UserControl>
