--- a/src/Server/LazyWelfare.ServerHost/Pages/StatePage.xaml
+++ b/src/Server/LazyWelfare.ServerHost/Pages/StatePage.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="WpfApp.Pages.StatePage"
+﻿<UserControl x:Class="LazyWelfare.ServerHost.Pages.StatePage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp"
+             xmlns:local="clr-namespace:LazyWelfare.ServerHost.Pages"
              mc:Ignorable="d" 
-               d:DesignHeight="550" d:DesignWidth="600">
+             d:DesignHeight="450" d:DesignWidth="800">
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"></RowDefinition>
@@ -25,6 +25,7 @@
             <Button   Content="服务启动"  Click="Button_ServiceStart_Click"  Width="80" FontSize="14"  ></Button>
             <Button   Content="服务停止"  Click="Button_ServiceStop_Click"  Width="80" FontSize="14"  ></Button>
         </StackPanel>
-        
+
     </Grid>
+
 </UserControl>
