--- a/src/Server/LazyWelfare.ServerHost/MainWindow.xaml
+++ b/src/Server/LazyWelfare.ServerHost/MainWindow.xaml
@@ -4,9 +4,38 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LazyWelfare.ServerHost"
+        xmlns:page="clr-namespace:LazyWelfare.ServerHost.Pages"
+        xmlns:form="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" MinHeight="650"  Height="650" Width="800"    ResizeMode="NoResize"  Closing="Window_Closing">
     <Grid>
+        
+    <TabControl x:Name="tabControl"  DockPanel.Dock="Top" Margin="5" VerticalAlignment="Top" TabStripPlacement="Left">
+        <TabItem Header="运行" Width="100" Height="50" FontSize="25" >
+            <ScrollViewer VerticalScrollBarVisibility="Auto" >
+                <page:StatePage  MinHeight="550" Width="660" />
+            </ScrollViewer>
+        </TabItem>
+        <TabItem Header="设置" Width="100" Height="50"  FontSize="25" VerticalAlignment="Bottom">
+            <ScrollViewer VerticalScrollBarVisibility="Auto"  Height="Auto">
+                <page:SettingPage MinHeight="550"  Width="660"  />
+            </ScrollViewer>
+        </TabItem>
+    </TabControl>
+
+        <local:NotificationAreaIcon Text="水水水水" MouseDoubleClick="NotificationAreaIcon_MouseDoubleClick"  >
+            <!--<local:NotificationAreaIcon.MenuItems>
+                <form:MenuItem Text="我在线上" Click="MenuItem_OnlineClick" />
+                <form:MenuItem Text="我在线上" Click="MenuItem_OnlineClick" />
+            </local:NotificationAreaIcon.MenuItems>-->
+
+            <local:NotificationAreaIcon.MenuStripItems>
+                <form:ToolStripItem  Text="我在线上" Click="MenuItem_OnlineClick" />
+                <form:ToolStripSeparator ></form:ToolStripSeparator>
+                <form:ToolStripItem  Text="我在线上" Click="MenuItem_OnlineClick" />
+            </local:NotificationAreaIcon.MenuStripItems>
+
+        </local:NotificationAreaIcon>
         
     </Grid>
 </Window>
