--- a/src/Server/LazyWelfare.ServerHost/Pages/StatePage.xaml
+++ b/src/Server/LazyWelfare.ServerHost/Pages/StatePage.xaml
@@ -5,23 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:LazyWelfare.ServerHost.Pages"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="600">
     <Grid Background="White">
         <Grid.RowDefinitions>
             <RowDefinition Height="80"></RowDefinition>
-            <RowDefinition Height="80"></RowDefinition>
-            <RowDefinition Height="80"></RowDefinition>
-            <RowDefinition Height="80"></RowDefinition>
+            <RowDefinition Height="270"></RowDefinition>
             <RowDefinition Height="80"></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
         <!-- 标题 -->
-        <Border  Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Background="#FFC98484" >
+        <Border  Grid.Row="0" Background="#FFC98484" >
             <TextBlock Name="TitleBroad" Text="运行状态"  FontSize="32" TextAlignment="Center" VerticalAlignment="Center" Foreground="#FF034F5B" ></TextBlock>
         </Border>
 
-        <StackPanel  Grid.Row="4" Grid.Column="1"  Height="50" Orientation="Horizontal" HorizontalAlignment="Right" >
+        <StackPanel  Grid.Row="1"  Orientation="Horizontal" HorizontalAlignment="Left" >
+            <Image x:Name="QrCode"></Image>
+        </StackPanel>
+
+
+        <StackPanel  Grid.Row="2"   Height="50" Orientation="Horizontal" HorizontalAlignment="Right" >
             <Button   Content="服务启动"  Click="Button_ServiceStart_Click"  Width="80" FontSize="14"  ></Button>
             <Button   Content="服务停止"  Click="Button_ServiceStop_Click"  Width="80" FontSize="14"  ></Button>
         </StackPanel>
