--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HomeView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HomeView.cshtml
@@ -29,5 +29,20 @@
     </ul>
 </div>
 
+<script>
+    $(function () {
+        $(".ServiceScan").click(function () {
+            javascript: AndroidScript.ScanHost();
+            //var url = $(this).data("hybrid");
+            //location.href = "scan:" + url;
+        });
+
+        $(".HybridLink").click(function () {
+            var url = $(this).data("hybrid");
+            location.href = "hybrid:" + url;
+        });
+    })
+</script>
+
 
  
