--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
@@ -1,4 +1,4 @@
-﻿@model  LazyWelfare.AndroidMobile.Models.HomeModel
+﻿@model  List<LazyWelfare.AndroidMobile.Models.HostModel>
 
 <div class="line-section">
     <div class="list-group">
