--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
@@ -6,7 +6,7 @@
     <div class="line-section">
         <ul class="list-group">
             <li class="list-group-item">
-                <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>@one.Name
+                <span class="glyphicon glyphicon-plane" aria-hidden="true"></span>@one.Name @one.Address
             </li>
         </ul>
     </div>
