--- a/src/Mobile/LazyWelfare.AndroidMobile/Assets/css/style.css
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Assets/css/style.css
@@ -31,3 +31,45 @@ body {
     color: #3c763d;
     background-color: #dff0d8;
 }
+
+span.glyphicon {
+    margin: 0;
+    padding: 10px 5px;
+    display: inline-block
+}
+
+.main-item {
+    cursor: pointer;
+    padding: 5px;
+}
+  
+.command-item span {
+    cursor: pointer;
+    margin: 0;
+    padding: 10px 25px;
+    border-left: 1px solid #c0c0c0;
+    display: inline-block
+}
+
+.command-item {
+    color: #3c763d;
+    padding: 0;
+    background-color: #dff0d8;
+    border-right: 1px solid #c0c0c0;
+    text-align: right;
+}
+
+.red {
+    color: #231818;
+    background-color: #e43c3c;
+}
+
+.orangered {
+    color: #231818;
+    background-color: orangered;
+}
+
+.blue {
+    color: #231818;
+    background-color: #509bcc;
+}
