--- a/src/Server/LazyWelfare.ServerWeb/Views/Shared/_MobileLayout.cshtml
+++ b/src/Server/LazyWelfare.ServerWeb/Views/Shared/_MobileLayout.cshtml
@@ -26,43 +26,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">{model.Header}</a>
+            <a class="navbar-brand" href="#">首页</a>
         </div>
         <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1" aria-expanded="false" style="height: 1px;">
             <ul class="nav navbar-nav">
                 <li class="active">
-                    <a href="#">
-                        Link
-                        <span class="sr-only">(current)</span>
-                    </a>
+                    <a href="javascript:void(0);" class="navbar-link" data-action="list"> List(列表)  <span class="sr-only">(current)</span>   </a>
                 </li>
                 <li>
-                    <a href="#">Link</a>
-                </li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                        <span class="caret"></span>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#">Action</a>
-                        </li>
-                        <li>
-                            <a href="#">Another action</a>
-                        </li>
-                        <li>
-                            <a href="#">Something else here</a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a href="#">Separated link</a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        <li>
-                            <a href="#">One more separated link</a>
-                        </li>
-                    </ul>
+                    <a href="javascript:void(0);" class="navbar-link" data-action="form">Form(表单)</a>
                 </li>
             </ul>
             <form class="navbar-form navbar-left">
