--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostsView.cshtml
@@ -32,7 +32,14 @@
             ViewScript.PartialLoad('#MainContent', '@HostDetailView.Partial.Host', '@HostDetailView.Partial.Path', "");
         });
         $(".command-item-set").click(function () { });
-        $(".command-item-delete").click(function () { });
+        $(".command-item-delete").click(function () {
+            var guid = $(this).parent().data("guid");
+            var result = false;
+            javascript: result = BuinessScript.DeleteHost(guid);
+            if (result) {
+                ViewScript.PartialLoad('#MainContent', '@HostsView.Partial.Host', '@HostsView.Partial.Path');
+            }
+        });
         $(".command-item-eidt").click(function () {
             var guid = $(this).parent().data("guid");
             ViewScript.PartialLoad('#MainContent', '@HostDetailView.Partial.Host', '@HostDetailView.Partial.Path', guid);
