--- a/src/Mobile/LazyWelfare.AndroidMobile/Assets/css/style.css
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Assets/css/style.css
@@ -12,7 +12,8 @@
 }
 
 body {
-    background-image: url("../images/33f5a319ebc4b74532a0bbd2c4fc1e178b821559.jpg");
+    background-color: #C4C4C4;
+    /*background-image: url("../images/33f5a319ebc4b74532a0bbd2c4fc1e178b821559.jpg");*/
     background-position: center 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -42,7 +43,12 @@ span.glyphicon {
     cursor: pointer;
     padding: 5px;
 }
-  
+
+.main-command-item {
+    cursor: pointer;
+    padding: 5px;
+}
+
 .command-item span {
     cursor: pointer;
     margin: 0;
@@ -54,7 +60,7 @@ span.glyphicon {
 .command-item {
     color: #3c763d;
     padding: 0;
-    background-color: #dff0d8;
+    background-color: #c0c0c0;
     border-right: 1px solid #c0c0c0;
     text-align: right;
 }
