--- a/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostDetailView.cshtml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Views/Partials/HostDetailView.cshtml
@@ -2,7 +2,9 @@
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3 class="panel-title">服务详情</h3>
+        <h3 class="panel-title">
+            <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span> 服务详情
+        </h3>
     </div>
     <div class="panel-body">
         <form class="HostModelForm">
@@ -30,7 +32,6 @@
         </div>
     </div>
 </div>
-
 
 <script>
     $(function () {
