--- a/src/Server/LazyWelfare.ServerWeb/Views/_ViewImports.cshtml
+++ b/src/Server/LazyWelfare.ServerWeb/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using LazyWelfare.ServerWeb
 @using LazyWelfare.ServerWeb.Models
+@using LazyWelfare.ServerCore
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
